[gd_scene load_steps=16 format=2]

[ext_resource path="res://Menus/MenusInGame/Runes/RunesMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/KeyboardController.gd" type="Script" id=2]
[ext_resource path="res://Game/Runes/Runes-02.png" type="Texture" id=3]
[ext_resource path="res://Menus/MenusInGame/Gui/LifeBar-Icon.png" type="Texture" id=4]
[ext_resource path="res://Menus/Font (immortal).ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.694118, 0.901961, 0.254902 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 125, 0, 125, 125 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 250, 0, 125, 125 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 375, 0, 125, 125 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 130, 0, 130, 130 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 260, 0, 130, 130 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 390, 0, 130, 130 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 650, 0, 130, 130 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 650, 0, 130, 130 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 5 )

[node name="RunesMenu" type="PopupPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -232.5
margin_right = 225.0
margin_bottom = 232.5
rect_min_size = Vector2( 450, 465 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="KeyboardController" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -232.5
margin_right = 225.0
margin_bottom = 232.5

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_right = 450.0
margin_bottom = 465.0
custom_constants/separation = 45
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 450.0
margin_bottom = 125.0

[node name="Power-01" type="TextureButton" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 162.0
margin_right = 287.0
margin_bottom = 125.0
texture_normal = SubResource( 2 )
texture_hover = SubResource( 3 )
texture_disabled = SubResource( 4 )

[node name="Icon" type="TextureRect" parent="CenterContainer/VBoxContainer/CenterContainer/Power-01"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -65.0
margin_right = 65.0
margin_bottom = 65.0
rect_min_size = Vector2( 90, 0 )
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 65, 65 )
texture = SubResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 450.0
margin_bottom = 295.0
custom_constants/separation = 200
alignment = 1

[node name="Power-02" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 125.0
margin_bottom = 125.0
texture_normal = SubResource( 2 )
texture_hover = SubResource( 3 )
texture_disabled = SubResource( 4 )

[node name="Icon" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer/Power-02"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -65.0
margin_right = 65.0
margin_bottom = 65.0
rect_min_size = Vector2( 90, 0 )
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 65, 65 )
texture = SubResource( 6 )

[node name="Power-03" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 325.0
margin_right = 450.0
margin_bottom = 125.0
texture_normal = SubResource( 2 )
texture_hover = SubResource( 3 )
texture_disabled = SubResource( 4 )

[node name="Icon" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer/Power-03"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -65.0
margin_right = 65.0
margin_bottom = 65.0
rect_min_size = Vector2( 90, 0 )
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 65, 65 )
texture = SubResource( 7 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 450.0
margin_bottom = 465.0
custom_constants/separation = 75
alignment = 1

[node name="Power-04" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 62.0
margin_right = 187.0
margin_bottom = 125.0
texture_normal = SubResource( 2 )
texture_hover = SubResource( 3 )
texture_disabled = SubResource( 4 )

[node name="Icon" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer2/Power-04"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -65.0
margin_right = 65.0
margin_bottom = 65.0
rect_min_size = Vector2( 90, 0 )
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 65, 65 )
texture = SubResource( 8 )

[node name="Power-05" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 262.0
margin_right = 387.0
margin_bottom = 125.0
texture_normal = SubResource( 2 )
texture_hover = SubResource( 3 )
texture_disabled = SubResource( 4 )

[node name="Icon" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer2/Power-05"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -65.0
margin_right = 65.0
margin_bottom = 65.0
rect_min_size = Vector2( 90, 0 )
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 65, 65 )
texture = SubResource( 9 )

[node name="RuneName" type="Label" parent="CenterContainer"]
margin_left = 181.0
margin_top = 213.0
margin_right = 268.0
margin_bottom = 251.0
custom_fonts/font = SubResource( 10 )
text = "Power"

[connection signal="visibility_changed" from="." to="." method="_on_PowerMenu_visibility_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/Power-01" to="." method="_on_Power01_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Power-02" to="." method="_on_Power02_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Power-03" to="." method="_on_Power03_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer2/Power-04" to="." method="_on_Power04_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer2/Power-05" to="." method="_on_Power05_pressed"]
